# internal/delivery/http/route/route.go
@@ -94,7 +94,7 @@ func (rc *RouteConfig) SetupExperimentRoutes(rg *gin.RouterGroup) {
 		prepRoutes := rg.Group("/prepared")
 		prepRoutes.Use(middleware.AdminOrManager())
 		{
-			prepRoutes.GET("/:id/:wavelen/:photon/:polarization/:action", rc.ExperimentController.Visualize)
+			prepRoutes.GET("/:id", rc.ExperimentController.Visualize)
 		}
 	}
 }
