# internal/infrastructure/datasource/persistance/experiment_chart_datasource.go
@@ -8,5 +8,5 @@ import (
 
 type ExperimentChartDataSource interface {
 	Create(ctx context.Context, chart *entity.ExperimentChart) error
-	FindByParams(ctx context.Context, experimentID uint, chartType, formula string, wavelen float64, polarization string, isPhoton int8) (*entity.ExperimentChart, error)
+	FindByParams(ctx context.Context, experimentID uint, chartType, formula string, wavelen float64, polarization string, isPhoton int8, glued int8) (*entity.ExperimentChart, error)
 }
